# cockpit-machines-ovirt-provider

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  cockpit-machines-ovirt-provider.spec.in  configure.ac  package.json
config/: webpack.config.prod.js
scripts/: build.js
src/: actions.js  cluster.jsx  config.js  configFuncs.js  helpers.js  hostVmsTabs.jsx  index.js  install.sh  installDialog.js  login.js  machines-ovirt.css  machines.override.json  ovirt.js  provider.js  react.js  reactComponents.js  reducers.js  selectors.js  shell.override.json  topLevelViewSwitch.jsx
src/components/: cluster.jsx  clusterTemplates.jsx  clusterVms.jsx  commonComponents.jsx  hostVmsTabs.jsx  topLevelViewSwitch.jsx  vdsm.jsx  vmConsoleComponents.jsx  vmDisksSubtab.jsx  vmOverviewProperties.jsx  vmProviderActions.jsx
vanilla/: index.js
